app/assets/stylesheets/components.scss
@import 'variables';

.app-body{
 -webkit-overflow-scrolling: touch;
 -ms-overflow-style: -ms-autohiding-scrollbar;
}

.button {
  background-color: darken($color4, 3%);
  font-family: inherit;
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  text-align: center;
  border: 10px none;
  color: $color5;
  font-size: 14px;
  font-weight: 500;
  letter-spacing: 0;
  text-transform: uppercase;
  padding: 0 16px;
  height: 36px;
  cursor: pointer;
  line-height: 36px;
  border-radius: 4px;
  text-decoration: none;
  transition: all 100ms ease-in;

  &:hover, &:active, &:focus {
    background-color: lighten($color4, 7%);
    transition: all 200ms ease-out;
  }

  &:disabled {
    background-color: $color3;
    cursor: default;
  }

  &.button-secondary {
    //
  }
}

.column-icon {
  color: $color3;
  background: lighten($color1, 4%);

  &:hover {
    color: lighten($color3, 7%);
  }
}

.column-icon-clear {
  font-size: 16px;
  padding: 15px;
  position: absolute;
  right: 48px;
  top: 0;
  cursor: pointer;
  z-index: 2;
}

@media screen and (min-width: 1025px) {
  .column-icon-clear {
    top: 10px;
  }
}

.icon-button {
  display: inline-block;
  padding: 0;
  color: lighten($color1, 26%);
  border: none;
  background: transparent;
  cursor: pointer;
  transition: all 100ms ease-in;

  &:hover, &:active, &:focus {
    color: lighten($color1, 33%);
    transition: all 200ms ease-out;
  }

  &.disabled {
    color: lighten($color1, 13%);
    cursor: default;
  }

  &.active {
    color: $color4;
  }

  &::-moz-focus-inner {
    border: 0;
  }

  &::-moz-focus-inner, &:focus, &:active {
    outline: 0 !important;
  }

  &.inverted {
    color: lighten($color1, 33%);

    &:hover, &:active, &:focus {
      color: lighten($color1, 26%);
    }

    &.active {
      color: $color4;
    }

    &.disabled {
      color: $color3;
    }
  }

  &.overlayed {
    box-sizing: content-box;
    background: rgba($color8, 0.6);
    color: rgba($color5, 0.7);
    border-radius: 4px;
    padding: 2px;

    &:hover {
      background: rgba($color8, 0.9);
    }
  }
}

.text-icon-button {
  color: lighten($color1, 33%);
  border: none;
  background: transparent;
  cursor: pointer;
  font-weight: 600;
  font-size: 11px;
  padding: 0 3px;
  line-height: 27px;
  outline: 0;
  transition: all 100ms ease-in;

  &:hover, &:active, &:focus {
    color: lighten($color1, 26%);
    transition: all 200ms ease-out;
  }

  &.disabled {
    color: lighten($color1, 13%);
    cursor: default;
  }

  &.active {
    color: $color4;
  }

  &::-moz-focus-inner {
    border: 0;
  }

  &::-moz-focus-inner, &:focus, &:active {
    outline: 0 !important;
  }
}

.dropdown--active .icon-button {
  color: $color4;
}

.invisible {
  font-size: 0;
  line-height: 0;
  display: inline-block;
  width: 0;
}

.ellipsis {
  &:after {
    content: "…";
  }
}

.avatar {
  border-radius: 4px;
  background: transparent no-repeat;
  background-position: 50%;
  background-clip: padding-box;
  position: relative;
}

.lightbox .icon-button {
  color: $color1;
}

.compose-form__warning {
  color: $color2;
  margin-bottom: 15px;
  border: 1px solid $color3;
  padding: 8px 10px;
  border-radius: 4px;
  font-size: 12px;
  font-weight: 400;

  strong {
    color: $color5;
    font-weight: 500;
  }
}

.compose-form__modifiers {
  color: $color1;
  font-family: inherit;
  font-size: 14px;
  background: $color5;
  border-radius: 0 0 4px 0;
}

.compose-form__buttons {
  padding: 10px;
  background: darken($color5, 8%);
  box-shadow: inset 0 5px 5px rgba($color8, 0.05);
  border-radius: 0 0 4px 4px;
  display: flex;

  .icon-button {
    box-sizing: content-box;
    padding: 0 3px;
  }
}

.compose-form__label {
  display: block;
  line-height: 24px;
  vertical-align: middle;

  &.with-border {
    border-top: 1px solid $color1;
    padding-top: 10px;
  }

  .compose-form__label__text {
    display: inline-block;
    vertical-align: middle;
    margin-bottom: 14px;
    margin-left: 8px;
    color: $color3;
  }
}

.compose-form__textarea, .follow-form__input {
  background: $color5;

  &:disabled {
    background: $color2;
  }
}

.compose-form__characterCounter {
  text-align: right;
  padding-top: 6px;
  margin-right: 4px;
  line-height: 12px;
}

.emojione {
  display: inline-block;
  font-size: inherit;
  vertical-align: middle;
  margin: -.2ex .15em .2ex;
  width: 16px;
  height: 16px;

  img {
    width: auto;
  }
}

.reply-indicator {
  border-radius: 4px 4px 0 0;
  position: relative;
  bottom: -2px;
  background: $color3;
  padding: 10px;

  .reply-indicator__display-name {
    color: $color1;
  }
}

.status__content, .reply-indicator__content {
  font-size: 15px;
  line-height: 20px;
  word-wrap: break-word;
  font-weight: 400;
  overflow: hidden;
  white-space: pre-wrap;

  .emojione {
    width: 18px;
    height: 18px;
  }

  p {
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: $color2;
    text-decoration: none;

    &:hover {
      text-decoration: underline;

      .fa {
        color: lighten($color1, 40%);
      }
    }

    &.mention {
      &:hover {
        text-decoration: none;

        span {
          text-decoration: underline;
        }
      }
    }

    .fa {
      color: lighten($color1, 30%);
    }
  }

  strong {
    font-weight: bold;
  }

  em {
    font-style: italic;
  }

  h1 {
    font-size: 2em;
    font-weight: bold;
  }

  h2 {
    font-size: 1.5em;
    font-weight: bold;
  }

  h3 {
    font-size: 1.17em;
    font-weight: bold;
  }

  h4 {
    font-size: 1em;
    font-weight: bold;
  }

  h5 {
    font-size: .83em;
    font-weight: bold;
  }

  h6 {
    font-size: .67em;
    font-weight: bold;
  }

  .status__content__spoiler-link {
    background: lighten($color1, 30%);

    &:hover {
      background: lighten($color1, 33%);
      text-decoration: none;
    }
  }
}
/* ... */

